--- a/sb-02-spring-module-examples/sb-01-mongo-rest-api/pom.xml
+++ b/sb-02-spring-module-examples/sb-01-mongo-rest-api/pom.xml
@@ -2,18 +2,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>sb-02-spring-module-examples</artifactId>
-        <groupId>com.sb.gltkn</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
+
+    <groupId>com.sb.gltkn</groupId>
+    <artifactId>sb-01-mongo-rest-api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>sb-01-mongo-rest-api</name>
+    <description>sb-01-mongo-rest-api</description>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sb-01-mongo-rest-api</artifactId>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.0</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
