[sb-02]-[sb-03]-spring-datajpa-postgresql modülü oluşturuldu.

--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -6,6 +6,7 @@
 	<modules>
 		<module>sb-01-mongo-rest-api</module>
         <module>sb-02-spring-elasticsearch</module>
+        <module>sb-03-spring-datajpa-postgresql</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
