[sb-02]-[sb-05]-spring-rabbitmq modülü oluşturuldu.

--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -8,7 +8,8 @@
         <module>sb-02-spring-elasticsearch</module>
         <module>sb-03-spring-datajpa-postgresql</module>
 		<module>sb-04-spring-api-doc</module>
-	</modules>
+        <module>sb-05-spring-rabbitmq</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
