--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -11,6 +11,7 @@
         <module>sb-05-spring-rabbitmq</module>
         <module>sb-06-spring-dockerization</module>
         <module>sb-07-spring-aop</module>
+        <module>sb-08-spring-graphql</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
