[sb-02]-[sb-09]-spring-redis-cache modülü oluşturuldu.

--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -12,6 +12,7 @@
         <module>sb-06-spring-dockerization</module>
         <module>sb-07-spring-aop</module>
         <module>sb-08-spring-graphql</module>
+        <module>sb-09-spring-redis-cache</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
