[sb-02]-[sb-12]-spring-events modülü oluşturuldu.

--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -15,6 +15,7 @@
         <module>sb-09-spring-redis-cache</module>
         <module>sb-10-spring-websocket</module>
         <module>sb-11-spring-pagination</module>
+        <module>sb-12-spring-events</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
