--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -16,6 +16,7 @@
         <module>sb-10-spring-websocket</module>
         <module>sb-11-spring-pagination</module>
         <module>sb-12-spring-events</module>
+        <module>sb-13-spring-gridfs-fileupload</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
