[sb-02]-[sb-15]-spring-flyway modülü oluşturuldu.

--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -18,6 +18,7 @@
         <module>sb-12-spring-events</module>
         <module>sb-13-spring-gridfs-fileupload</module>
         <module>sb-14-spring-kafka</module>
+        <module>sb-15-spring-flyway</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
