[sb-02]-[sb-16]-spring-rest-versioning modülü oluşturuldu.

--- a/sb-02-spring-module-examples/pom.xml
+++ b/sb-02-spring-module-examples/pom.xml
@@ -19,6 +19,8 @@
         <module>sb-13-spring-gridfs-fileupload</module>
         <module>sb-14-spring-kafka</module>
         <module>sb-15-spring-flyway</module>
+        <module>sb-16-spring-rest-versioning</module>
+        <module>sb-17-spring-exception-handling</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
